--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
     math: Math tests
-    login: All login tests
-    positive: All positive selenium tests
-    negative: all negative selenium tests
+    login: All Login tests
+    positive: All positive Selenium tests
+    negative: All negative Selenium tests
